email smtp installation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:postgresql://localhost:1337/postgres-crm
 spring.datasource.username=abdykili
 spring.datasource.password=281001ilyas
 
+
+#SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=n13wka@gmail.com
+spring.mail.password=281001Abdykarov!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
