--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ jwt.signing.key=signingkey
 jwt.authorities.key=roles
 jwt.token.prefix=Bearer
 jwt.header.string=Authorization
+
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+file.upload-dir=/home/yogesh/media/upload
+
+
