--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:postgresql://localhost:1338/postgres-crm
 spring.datasource.username=abdykili
 spring.datasource.password=281001ilyas
