--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 file.upload-dir=/home/yogesh/media/upload
 
-
+spring.mail.default-encoding=UTF-8
