--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "@types/jwt-decode": "^3.1.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
