--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,22 @@ spring.mail.username=n13wka@gmail.com
 spring.mail.password=281001Abdykarov!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 jwt.token.validity=18000
 jwt.signing.key=signingkey
 jwt.authorities.key=roles
 jwt.token.prefix=Bearer
 jwt.header.string=Authorization
+
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
-file.upload-dir=/home/yogesh/media/upload
+
+file.upload.contracts=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
+file.upload.edr-requests=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
+file.app.folder=/home/abdykili/workflow/CRM-energetic/src/main/resources/documents/
+
+#file.upload.contracts=/home/crm/supercontracts/
+#file.upload.edr-requests=/home/crm/edr_request/
+#file.app.folder=/home/crm/documents/
 
 spring.mail.default-encoding=UTF-8
