--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:1338/postgres-crm
 spring.datasource.username=abdykili
 spring.datasource.password=281001ilyas
@@ -22,6 +22,7 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
 file.upload.contracts=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
+file.upload.factures=/home/abdykili/workflow/CRM-energetic/src/main/resources/factures/
 file.upload.edr-requests=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
 file.app.folder=/home/abdykili/workflow/CRM-energetic/src/main/resources/documents/
 
