--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:postgresql://localhost:1338/postgres-crm
 spring.datasource.username=abdykili
 spring.datasource.password=281001ilyas
@@ -21,13 +21,13 @@ jwt.header.string=Authorization
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
-file.upload.contracts=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
-file.upload.factures=/home/abdykili/workflow/CRM-energetic/src/main/resources/factures/
-file.upload.edr-requests=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
-file.app.folder=/home/abdykili/workflow/CRM-energetic/src/main/resources/documents/
+#file.upload.contracts=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
+#file.upload.factures=/home/abdykili/workflow/CRM-energetic/src/main/resources/factures/
+#file.upload.edr-requests=/home/abdykili/workflow/CRM-energetic/src/main/resources/supercontracts/
+#file.app.folder=/home/abdykili/workflow/CRM-energetic/src/main/resources/documents/
 
-#file.upload.contracts=/home/crm/supercontracts/
-#file.upload.edr-requests=/home/crm/edr_request/
-#file.app.folder=/home/crm/documents/
+file.upload.contracts=/home/crm/supercontracts/
+file.upload.edr-requests=/home/crm/edr_request/
+file.app.folder=/home/crm/documents/
 
 spring.mail.default-encoding=UTF-8
