--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.mail.password=281001Abdykarov!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+mail.smtp.starttls.enable=true;
+mail.smtp.ssl.protocols=TLSv1.2;
+
 jwt.token.validity=18000
 jwt.signing.key=signingkey
 jwt.authorities.key=roles
